--- a/css/styles.css
+++ b/css/styles.css
@@ -5,28 +5,28 @@ div{
   text-align: center;
 }
 input{
-  width: 45%;
+  width: 50px;
 }
 input[type=number]{
   width = 100%;
-  padding: 12px 20px;
+  padding: 6px 10px;
   margin: 8px 0;
   display: inline-block;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+  border: 5px solid red;
+  border-radius: 8px;
   box-sizing:content-box;
 }
 button{
   width: 100px;
-  height: 40px;
-  background-color: darkgrey;
+  height: 30px;
+  background-color: purple;
   border-radius: 4px;
-  border: 1px solid #ccc;
+  border: 1px solid pink;
 }
 button:hover{
   background-color: green;
 }
 p{
-  font-style: italic;
-  font-family: fantasy;
+  font-style: normal;
+  font-family: sans-serif;
 }
