--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ input[type=number]{
   margin: 8px 0;
   display: inline-block;
   border: 5px solid red;
-  border-radius: 8px;
+  border-radius: 10px;
   box-sizing:content-box;
 }
 button{
@@ -26,7 +26,8 @@ button{
 button:hover{
   background-color: green;
 }
-p{
+p{color: brown;
   font-style: normal;
   font-family: sans-serif;
 }
+h1{color: green}
