--- a/css/styles.css
+++ b/css/styles.css
@@ -10,10 +10,10 @@ input{
 input[type=number]{
   width = 100%;
   padding: 6px 10px;
-  margin: 8px 0;
+  margin: 10px 0;
   display: inline-block;
-  border: 5px solid red;
-  border-radius: 10px;
+  border: 3px solid red;
+  border-radius: 20px;
   box-sizing:content-box;
 }
 button{
@@ -31,3 +31,4 @@ p{color: brown;
   font-family: sans-serif;
 }
 h1{color: green}
+.in{display: inline-flex;}
