--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,14 @@
 div{
-  border-radius: 5px;
-  background-color: orange;
-  padding: 100px;
+
+
+
   text-align: center;
 }
 input{
   width: 50px;
+}
+.container {
+  background-image: url('../images/rr.jpg');
 }
 input[type=number]{
   width = 100%;
@@ -26,9 +29,10 @@ button{
 button:hover{
   background-color: green;
 }
-p{color: brown;
+p{color: green;
   font-style: normal;
   font-family: sans-serif;
+  font-size: 40px;
 }
-h1{color: green}
-.in{display: inline-flex;}
+h1{color: red}
+.in{display: inline;}
