--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ input{
 }
 input[type=number]{
   width = 100%;
-  padding: 6px 10px;
+  padding: 8px 12px;
   margin: 10px 0;
   display: inline-block;
   border: 3px solid red;
@@ -32,7 +32,8 @@ button:hover{
 p{color: green;
   font-style: normal;
   font-family: sans-serif;
-  font-size: 40px;
+  font-size: 30px;
 }
-h1{color: red}
+h1{color: red;
+font-size: 40px}
 .in{display: inline;}
